# gemmc

./: CMakeLists.txt  IntervalTest.cuh  README.md  cudastart.cuh  gemmGPU.cuh  gemmGPUCTest.cuh  gemmGPUPyTest.cuh  main.cu
src/: gemmGPU.cuh  mma.cuh
test/: gemmGPUCTest.cuh  gemmGPUPyTest.cuh
